istio/bookinfo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["httpbin.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: productpage
        weight: 1
        port: 9080
    - backendRefs:
      - name: productpage
        weight: 1
        port: 9080
